samples/_failures_safe/1761726046_bca79e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49b1df94.c: In function ‘update_stats’:
./samples/SAFE/__tmp_49b1df94.c:123:9: error: expected identifier at end of input
  123 |         strncpy(analyzer->stats.latest, entry->timestamp, sizeof(analyzer->
      |         ^~~~~~~
./samples/SAFE/__tmp_49b1df94.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49b1df94.c:123:9: error: expected declaration or statement at end of input
